<resources>
    <string name="app_name">TicketFast</string>
    <string name="ainda_n_o_tem_uma_conta">Ainda não tem uma conta?</string>
    <string name="login">Login</string>
    <string name="registrar">Registrar</string>
    <string name="email">Email...</string>
    <string name="senha">Senha...</string>
    <string name="nome">Nome...</string>
    <string name="confirme_a_senha">Confirme a senha</string>
    <string name="todo">image</string>
    <string name="desc">descrição</string>
    <string name="name">name</string>
    <string name="date">date</string>
    <string name="local">local</string>
    <string name="buy">Comprar</string>
    <string name="meus_ingressos">Meus Ingressos</string>
    <string name="sobre">Sobre</string>
    <string name="cart_o_visa">Cartão VISA</string>
    <string name="cart_o_master_card">Cartão Master Card</string>
    <string name="n_mero_do_cart_o">Número do cartão</string>
    <string name="_4485203648101323">4485203648101323</string>
    <string name="nome_do_propriet_rio_cart_o">Nome do proprietário cartão</string>
    <string name="edson_santana">Edson Santana</string>
    <string name="m_s">Mês</string>
    <string name="_01">01</string>
    <string name="ano">Ano</string>
    <string name="_2023">2023</string>
    <string name="parcelas">Parcelas</string>
    <string name="cvv">CVV</string>
    <string name="_253">253</string>
    <string name="_2">2</string>
    <string name="finalizar">Finalizar</string>
    <string name="price">preço</string>
    <string name="valor_a_pagar">Valor a pagar</string>
    <string name="Titulo">titulo</string>
</resources>
