<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.EventDesc"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/image_View"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:contentDescription="@string/todo"
        android:scaleType="fitXY" />

    <TextView
        android:id="@+id/text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="28sp"
        android:textStyle="bold"
        android:paddingTop="10dp"/>
    <TextView
        android:id="@+id/text_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingTop="10dp"/>
    <TextView
        android:id="@+id/text_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc"
        android:paddingTop="10dp"/>
    <TextView
        android:id="@+id/text_local"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/local"
        android:paddingTop="5dp"/>

    <TextView
        android:id="@+id/text_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:paddingTop="5dp"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/btn_buy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buy"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:background="@color/colorAccent"
        android:textColor="#fff" />





</android.support.v7.widget.LinearLayoutCompat>